added get specific event service
